[package]
name = "RSS2TG"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
rss = "2.0"
tokio = { version = "1.0", features = ["full"] }

[[bin]]
edition = "2021"
name = "RSS2TG"
path = "src/main.rs"

[build]
target = "x86_64-unknown-linux-gnu"